--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <main class="container mx-auto lg:h-screen grid grid-rows-1 items-center">
+    <main
+        class="container mx-auto bg-green-100 lg:bg-white h-screen md:h-full lg:h-screen grid grid-rows-1 items-center">
         <div class="mx-auto w-full bg-green-100 lg:p-20 md:p-10 p-6 lg:rounded-2xl">
             <h1 class="text-center uppercase text-4xl font-bold text-lime-900 pb-12">Baap-Er-<span
                     class="text-red-700">Bank</span>!!!
