--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="bg-cyan-800 md:p-10 p-4  rounded-lg col-span-2 lg:col-span-1">
                         <h4>balance</h4>
-                        <h6 class="pt-2">$ <span id="balance_total">1000</span></h6>
+                        <h6 class="pt-2">$ <span id="balance_total">5000</span></h6>
                     </div>
                 </div>
 
@@ -57,7 +57,8 @@
             </section>
         </div>
     </main>
-    <script src="assets/js/dom.js"></script>
+    <!-- <script src="assets/js/dom.js"></script> -->
+    <script src="assets/js/functional-bank.js"></script>
 </body>
 
 </html>
